Will not use the lld of llvm when using AppleCLang on mac m1
Signed-off-by: Cerdore <khn64@163.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -202,7 +202,9 @@ find_program (LLD_PATH NAMES "lld${COMPILER_POSTFIX}" "lld")
 find_program (GOLD_PATH NAMES "gold")
 
 if (NOT LINKER_NAME)
-    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND LLD_PATH)
+    if (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND LLD_PATH STREQUAL "/opt/homebrew/opt/llvm/bin/lld")
+        message(NOTICE "Will not use the llvm's lld")
+    elseif (CMAKE_CXX_COMPILER_ID STREQUAL "Clang" AND LLD_PATH)
         set (LINKER_NAME "lld")
     elseif (GOLD_PATH)
         set (LINKER_NAME "gold")
