--- a/contrib/arm-optimized-routines-cmake/CMakeLists.txt
+++ b/contrib/arm-optimized-routines-cmake/CMakeLists.txt
@@ -1,3 +1,17 @@
+# Copyright 2022 PingCAP, Ltd.
+#
+# Licensed under the Apache License, Version 2.0 (the "License");
+# you may not use this file except in compliance with the License.
+# You may obtain a copy of the License at
+#
+#     http://www.apache.org/licenses/LICENSE-2.0
+#
+# Unless required by applicable law or agreed to in writing, software
+# distributed under the License is distributed on an "AS IS" BASIS,
+# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
+# See the License for the specific language governing permissions and
+# limitations under the License.
+
 ENABLE_LANGUAGE(C)
 ENABLE_LANGUAGE(ASM)
 set(TIFLASH_AOR_DIR ../arm-optimized-routines)
@@ -5,43 +19,11 @@ set(TIFLASH_AOR_DIR ../arm-optimized-routines)
 # GCC/Clang enables ASIMD for Armv8-a by default, we let us use
 # ASIMD variant anyway
 
-set(TIFLASH_AARCH64_STRING_FILES
-        ${TIFLASH_AOR_DIR}/string/aarch64/memchr.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/memcmp.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/memcpy-advsimd.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/memrchr.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/memset.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/stpcpy.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strchr.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strchrnul.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strcmp.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strcpy.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strlen.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strcmp.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strnlen.S
-        ${TIFLASH_AOR_DIR}/string/aarch64/strrchr.S
-        )
-add_library(tiflash-aarch64-string STATIC ${TIFLASH_AARCH64_STRING_FILES})
-target_compile_definitions(tiflash-aarch64-string PRIVATE
-        ARM_FNSTART=
-        ARM_FNEND=
-        __memcpy_aarch64=memcpy
-        __memmove_aarch64=memmove
-        __memset_aarch64=memset
-        __memchr_aarch64=memchr
-        __memrchr_aarch64=memrchr
-        __memcmp_aarch64=memcmp
-        __strcpy_aarch64=strcpy
-        __strcmp_aarch64=strcmp
-        __strchr_aarch64=strchr
-        __strrchr_aarch64=strrchr
-        __strchrnul_aarch64=strchrnul
-        __strlen_aarch64=strlen
-        __strnlen_aarch64=strnlen
-        __strncmp_aarch64=strncmp
-        __memcpy_aarch64_simd=memcpy
-        __memmove_aarch64_simd=memmove
-)
+file(GLOB TIFLASH_AARCH64_STRING_FILES ${TIFLASH_AOR_DIR}/string/aarch64/*.S)
+add_library(tiflash-aarch64-string STATIC ${TIFLASH_AARCH64_STRING_FILES} src/aor.cpp)
+target_compile_options(tiflash-aarch64-string PRIVATE -march=armv8.8-a+sve)
+target_include_directories(tiflash-aarch64-string PRIVATE ${TIFLASH_AOR_DIR}/string/include)
+target_include_directories(tiflash-aarch64-string PUBLIC include)
 
 file(GLOB TIFLASH_AARCH64_MATH_FILES ${TIFLASH_AOR_DIR}/math/*.c)
 add_library(tiflash-aarch64-math STATIC ${TIFLASH_AARCH64_MATH_FILES})
