--- a/contrib/arm-optimized-routines-cmake/CMakeLists.txt
+++ b/contrib/arm-optimized-routines-cmake/CMakeLists.txt
@@ -20,10 +20,10 @@ set(TIFLASH_AOR_DIR ../arm-optimized-routines)
 # ASIMD variant anyway
 
 file(GLOB TIFLASH_AARCH64_STRING_FILES ${TIFLASH_AOR_DIR}/string/aarch64/*.S)
-add_library(tiflash-aarch64-string STATIC ${TIFLASH_AARCH64_STRING_FILES} src/aor.cpp)
+add_library(tiflash-aarch64-string STATIC ${TIFLASH_AARCH64_STRING_FILES} src/aor.c)
 target_compile_options(tiflash-aarch64-string PRIVATE -march=armv8-a+sve)
+target_link_libraries(tiflash-aarch64-string PUBLIC cpu_features)
 target_include_directories(tiflash-aarch64-string PRIVATE ${TIFLASH_AOR_DIR}/string/include)
-target_include_directories(tiflash-aarch64-string PUBLIC include)
 
 file(GLOB TIFLASH_AARCH64_MATH_FILES ${TIFLASH_AOR_DIR}/math/*.c)
 add_library(tiflash-aarch64-math STATIC ${TIFLASH_AARCH64_MATH_FILES})
