upgrade prometheus-cpp to v1.0.1
Signed-off-by: YangKeao <yangkeao@chunibyo.icu>

--- a/contrib/prometheus-cpp-cmake/core/CMakeLists.txt
+++ b/contrib/prometheus-cpp-cmake/core/CMakeLists.txt
@@ -23,6 +23,12 @@ target_link_libraries(core
     $<$<AND:$<BOOL:UNIX>,$<NOT:$<BOOL:APPLE>>>:rt>
 )
 
+if(HAVE_CXX_LIBATOMIC)
+  # the exported library config must use libatomic unconditionally
+  # (the HAVE_CXX_LIBATOMIC variable should not leak into the target config)
+  target_link_libraries(core PUBLIC atomic)
+endif()
+
 target_include_directories(core
   PUBLIC
     $<BUILD_INTERFACE:${PROMETHEUS_SRC_DIR}/core/include>
