--- a/.gitmodules
+++ b/.gitmodules
@@ -31,7 +31,8 @@
 	branch = master
 [submodule "contrib/client-c"]
 	path = contrib/client-c
-	url = https://github.com/tikv/client-c.git
+	url = https://github.com/JaySon-Huang/client-c.git
+	branch = batch_cop
 [submodule "contrib/tiflash-proxy"]
 	path = contrib/tiflash-proxy
 	url = https://github.com/JaySon-Huang/tikv.git
