add test for fast mode

--- a/dbms/src/Storages/DeltaMerge/tests/CMakeLists.txt
+++ b/dbms/src/Storages/DeltaMerge/tests/CMakeLists.txt
@@ -42,6 +42,9 @@ target_link_libraries(dm_test_storage_delta_merge
 add_executable(dm_test_delta_merge_store EXCLUDE_FROM_ALL gtest_dm_delta_merge_store.cpp)
 target_link_libraries(dm_test_delta_merge_store dbms gtest_main clickhouse_functions)
 
+add_executable(dm_test_delta_merge_store_for_fast_mode EXCLUDE_FROM_ALL gtest_dm_delta_merge_store_for_fast_mode.cpp)
+target_link_libraries(dm_test_delta_merge_store_for_fast_mode dbms gtest_main clickhouse_functions)
+
 add_executable(dm_test_segment EXCLUDE_FROM_ALL gtest_dm_segment.cpp)
 target_link_libraries(dm_test_segment dbms gtest_main clickhouse_functions)
 
