--- a/dbms/src/Storages/DeltaMerge/tests/CMakeLists.txt
+++ b/dbms/src/Storages/DeltaMerge/tests/CMakeLists.txt
@@ -63,6 +63,9 @@ target_link_libraries(dm_test_delta_index_manager dbms gtest_main clickhouse_fun
 add_executable(dm_test_delta_value_space EXCLUDE_FROM_ALL gtest_dm_delta_value_space.cpp)
 target_link_libraries(dm_test_delta_value_space dbms gtest_main clickhouse_functions)
 
+add_executable(dm_test_column_file EXCLUDE_FROM_ALL gtest_dm_column_file.cpp)
+target_link_libraries(dm_test_column_file dbms gtest_main clickhouse_functions)
+
 add_subdirectory (bank EXCLUDE_FROM_ALL)
 
 add_subdirectory (stress EXCLUDE_FROM_ALL)
