revert License checker for feature branch: planner_refactory
ref #5321

--- a/.github/workflows/license-checker.yml
+++ b/.github/workflows/license-checker.yml
@@ -3,10 +3,10 @@ name: License checker
 on:
   push:
     branches:
-      - planner_refactory
+      - master
   pull_request:
     branches:
-      - planner_refactory
+      - master
 
 jobs:
   check-license:
