--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "contrib/arm-optimized-routines"]
 	path = contrib/arm-optimized-routines
 	url = https://github.com/ARM-software/optimized-routines
+[submodule "contrib/CRoaring"]
+	path = contrib/CRoaring
+	url = git@github.com:RoaringBitmap/CRoaring.git
