--- a/contrib/jemalloc-cmake/CMakeLists.txt
+++ b/contrib/jemalloc-cmake/CMakeLists.txt
@@ -89,12 +89,12 @@ if (ARCH_LINUX)
     # https://github.com/ClickHouse/ClickHouse/issues/11121 for motivation.
     if (JEMALLOC_NARENAS GREATER 0)
         set (JEMALLOC_CONFIG_MALLOC_CONF "percpu_arena:percpu,oversize_threshold:0,muzzy_decay_ms:5000,dirty_decay_ms:5000,narenas:${JEMALLOC_NARENAS}")
-    else (JEMALLOC_NARENAS GREATER 0)
+    else ()
         set (JEMALLOC_CONFIG_MALLOC_CONF "percpu_arena:percpu,oversize_threshold:0,muzzy_decay_ms:5000,dirty_decay_ms:5000")
-    endif (JEMALLOC_NARENAS GREATER 0)
-else (ARCH_LINUX)
+    endif ()
+else ()
     set (JEMALLOC_CONFIG_MALLOC_CONF "oversize_threshold:0,muzzy_decay_ms:5000,dirty_decay_ms:5000")
-endif (ARCH_LINUX)
+endif ()
 
 message (STATUS "jemalloc malloc_conf: ${JEMALLOC_CONFIG_MALLOC_CONF}")
 
