Set jemalloc's narenas to 40 for debug image to work properly in compute resource pool of k8s pods (#5663)
close pingcap/tiflash#5662

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -467,9 +467,18 @@ endif()
 option (ENABLE_FAILPOINTS "Enables failpoints injection" ${ENABLE_FAILPOINTS_DEFAULT})
 if (ENABLE_FAILPOINTS)
     message (STATUS "Failpoints are enabled")
-else (ENABLE_FAILPOINTS)
+else ()
     message (STATUS "Failpoints are disabled")
-endif (ENABLE_FAILPOINTS)
+endif ()
+
+# Since JEMALLOC_NARENAS_COUNT is introduced for very limited usage, default to -1
+set (JEMALLOC_NARENAS_DEFAULT -1)
+option (JEMALLOC_NARENAS "Set Jemalloc narenas " ${JEMALLOC_NARENAS_DEFAULT})
+if (JEMALLOC_NARENAS LESS_EQUAL 0)
+    message (STATUS "No jemalloc narenas settings")
+else ()
+    message (STATUS "Set jemalloc narenas ${JEMALLOC_NARENAS}")
+endif ()
 
 # Flags for test coverage
 option (TEST_COVERAGE "Enables flags for test coverage" OFF)
