--- a/libs/libcommon/src/tests/CMakeLists.txt
+++ b/libs/libcommon/src/tests/CMakeLists.txt
@@ -44,9 +44,11 @@ target_link_libraries (gtests_libcommon gtest_main common)
 add_check(gtests_libcommon)
 
 add_executable(bench_libcommon
-    bench_logger.cpp
+    # TODO: need to fix broken src file if necessary
+    # bench_logger.cpp 
+    bench_mem_utils.cpp
 )
-target_link_libraries(bench_libcommon benchmark::benchmark_main common)
+target_link_libraries(bench_libcommon benchmark::benchmark_main common m)
 
 add_executable (dump_variable dump_variable.cpp)
 target_link_libraries (dump_variable clickhouse_common_io)
