--- a/dbms/src/Flash/CMakeLists.txt
+++ b/dbms/src/Flash/CMakeLists.txt
@@ -19,6 +19,8 @@ add_headers_and_sources(flash_service ./Coprocessor)
 add_headers_and_sources(flash_service ./Mpp)
 add_headers_and_sources(flash_service ./Executor)
 add_headers_and_sources(flash_service ./Pipeline)
+add_headers_and_sources(flash_service ./Pipeline/dag)
+add_headers_and_sources(flash_service ./Pipeline/task)
 add_headers_and_sources(flash_service ./Planner)
 add_headers_and_sources(flash_service ./Planner/plans)
 add_headers_and_sources(flash_service ./Statistics)
