--- a/dbms/src/Transforms/CMakeLists.txt
+++ b/dbms/src/Transforms/CMakeLists.txt
@@ -12,24 +12,6 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-add_subdirectory (Columns)
-add_subdirectory (Common)
-add_subdirectory (Core)
-add_subdirectory (DataStreams)
-add_subdirectory (Transforms)
-add_subdirectory (DataTypes)
-add_subdirectory (Dictionaries)
-add_subdirectory (Storages)
-add_subdirectory (Parsers)
-add_subdirectory (IO)
-add_subdirectory (Functions)
-add_subdirectory (Interpreters)
-add_subdirectory (AggregateFunctions)
-add_subdirectory (Server)
-add_subdirectory (Client)
-add_subdirectory (TableFunctions)
-add_subdirectory (Flash)
-add_subdirectory (Encryption)
 if (ENABLE_TESTS)
-  add_subdirectory (TestUtils)
+    add_subdirectory (tests EXCLUDE_FROM_ALL)
 endif ()
