--- a/dbms/CMakeLists.txt
+++ b/dbms/CMakeLists.txt
@@ -63,6 +63,7 @@ add_headers_and_sources(clickhouse_common_io src/IO)
 add_headers_and_sources(dbms src/Analyzers)
 add_headers_and_sources(dbms src/Core)
 add_headers_and_sources(dbms src/DataStreams)
+add_headers_and_sources(dbms src/Transforms)
 add_headers_and_sources(dbms src/DataTypes)
 add_headers_and_sources(dbms src/Databases)
 add_headers_and_sources(dbms src/Debug)
