--- a/libs/libcommon/src/tests/CMakeLists.txt
+++ b/libs/libcommon/src/tests/CMakeLists.txt
@@ -40,15 +40,21 @@ add_executable (gtests_libcommon
     gtest_logger.cpp
     gtest_arithmetic_overflow.cpp
     )
-target_link_libraries (gtests_libcommon gtest_main common)
+target_link_libraries (gtests_libcommon gtest_main common memcpy)
 add_check(gtests_libcommon)
+
+set (bench_libcommon_sources bench_mem_utils.cpp)
+
+if (NOT USE_INTERNAL_MEMCPY)
+    list (APPEND bench_libcommon_sources bench_memcpy.cpp)
+endif ()
 
 add_executable(bench_libcommon
     # TODO: need to fix broken src file if necessary
     # bench_logger.cpp 
-    bench_mem_utils.cpp
+    ${bench_libcommon_sources}
 )
-target_link_libraries(bench_libcommon benchmark::benchmark_main common m)
+target_link_libraries(bench_libcommon benchmark::benchmark_main common m memcpy)
 
 add_executable (dump_variable dump_variable.cpp)
 target_link_libraries (dump_variable clickhouse_common_io)
