--- a/libs/libmemcpy/CMakeLists.txt
+++ b/libs/libmemcpy/CMakeLists.txt
@@ -14,28 +14,31 @@
 
 option(TIFLASH_FOLLY_MEMCPY_IS_MEMCPY "use folly memcpy as default `memcpy` and `memmove`" ON)
 
-set_property(SOURCE folly/memcpy.S PROPERTY LANGUAGE CXX)
-
-if (TIFLASH_ENABLE_AVX_SUPPORT)
-    set_property(SOURCE folly/memcpy.S APPEND PROPERTY COMPILE_OPTIONS "-x" "assembler-with-cpp")
-    set_property(SOURCE folly/memcpy.S APPEND PROPERTY COMPILE_FLAGS "-mavx -mavx2")
-    set_property(SOURCE folly/FollyMemcpy.cpp APPEND PROPERTY COMPILE_FLAGS "-mavx -mavx2")
-endif ()
-
 set (memcpy_sources)
 
-list (APPEND memcpy_sources folly/memcpy.S folly/FollyMemcpy.cpp)
+# only enbale folly memcpy under linux x86_64 with avx2 supported
+if (ARCH_LINUX AND TIFLASH_ENABLE_AVX_SUPPORT)
+    set_property(SOURCE folly/memcpy.S PROPERTY LANGUAGE CXX)
+    set_property(SOURCE folly/memcpy.S APPEND PROPERTY COMPILE_OPTIONS "-x" "assembler-with-cpp")
+    set_property(SOURCE folly/memcpy.S APPEND PROPERTY COMPILE_FLAGS "-mavx -mavx2")
+    list (APPEND memcpy_sources folly/memcpy.S)
+    message (STATUS "`libmemcpy` support Folly memcpy")
+else ()
+    set (TIFLASH_FOLLY_MEMCPY_IS_MEMCPY OFF)
+endif ()
 
 if (USE_INTERNAL_MEMCPY)
     if (TIFLASH_FOLLY_MEMCPY_IS_MEMCPY)
-        message (STATUS "Use folly memcpy as default `memcpy` and `memmove`")
+        message (STATUS "Using Folly memcpy as default `memcpy` and `memmove`")
         add_definitions(-DFOLLY_MEMCPY_IS_MEMCPY=1)
     else ()
+        message (STATUS "Using internal memcpy")
         list (APPEND memcpy_sources memcpy.cpp)
     endif ()
 endif()
 
 add_library (memcpy STATIC ${memcpy_sources})
+target_include_directories(memcpy PUBLIC ${TiFlash_SOURCE_DIR}/libs/libcommon/include)
 
 set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fomit-frame-pointer")
 set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -fomit-frame-pointer")
