introduce magic_enum into tiflash

--- a/.gitmodules
+++ b/.gitmodules
@@ -85,3 +85,6 @@
 [submodule "contrib/arm-optimized-routines"]
 	path = contrib/arm-optimized-routines
 	url = https://github.com/ARM-software/optimized-routines
+[submodule "contrib/magic_enum"]
+	path = contrib/magic_enum
+	url = https://github.com/Neargye/magic_enum.git
