cmake: Build rust deps using debug profile when build-type is not release

--- a/libs/libsymbolization/CMakeLists.txt
+++ b/libs/libsymbolization/CMakeLists.txt
@@ -16,10 +16,19 @@ set(_SYMBOLIZATION_SOURCE_DIR "${TiFlash_SOURCE_DIR}/libs/libsymbolization")
 set(_SYMBOLIZATION_LIBRARY "${CMAKE_CURRENT_BINARY_DIR}/release/${CMAKE_STATIC_LIBRARY_PREFIX}symbolization${CMAKE_STATIC_LIBRARY_SUFFIX}")
 file(GLOB_RECURSE _SYMBOLIZATION_SRCS "${_SYMBOLIZATION_SOURCE_DIR}/src/*.rs")
 file(GLOB_RECURSE _SYMBOLIZATION_HEADERS "${_SYMBOLIZATION_SOURCE_DIR}/include/*.h")
+
+if (CMAKE_BUILD_TYPE_UC STREQUAL "RELEASE" OR CMAKE_BUILD_TYPE_UC STREQUAL "RELWITHDEBINFO" OR CMAKE_BUILD_TYPE_UC STREQUAL "MINSIZEREL")
+        set(_SYMBOLIZATION_BUILD_PROFILE "release")
+        set(_SYMBOLIZATION_BUILD_ARGS --release)
+else()
+        set(_SYMBOLIZATION_BUILD_PROFILE "debug")
+endif()
+
 add_custom_command(OUTPUT ${_SYMBOLIZATION_LIBRARY}
-        COMMENT "Building symbolization"
-        COMMAND cargo build --release --target-dir ${CMAKE_CURRENT_BINARY_DIR}
+        COMMENT "Building symbolization using ${_SYMBOLIZATION_BUILD_PROFILE} profile"
+        COMMAND cargo build ${_SYMBOLIZATION_BUILD_ARGS} --target-dir ${CMAKE_CURRENT_BINARY_DIR}
         VERBATIM
+        USES_TERMINAL
         WORKING_DIRECTORY ${_SYMBOLIZATION_SOURCE_DIR}
         DEPENDS "${_SYMBOLIZATION_SRCS}"
                 "${_SYMBOLIZATION_HEADERS}"
