Respect SAN_DEBUG
Signed-off-by: Wish <breezewish@outlook.com>

--- a/libs/libsymbolization/CMakeLists.txt
+++ b/libs/libsymbolization/CMakeLists.txt
@@ -17,11 +17,11 @@ set(_SYMBOLIZATION_LIBRARY "${CMAKE_CURRENT_BINARY_DIR}/release/${CMAKE_STATIC_L
 file(GLOB_RECURSE _SYMBOLIZATION_SRCS "${_SYMBOLIZATION_SOURCE_DIR}/src/*.rs")
 file(GLOB_RECURSE _SYMBOLIZATION_HEADERS "${_SYMBOLIZATION_SOURCE_DIR}/include/*.h")
 
-if (CMAKE_BUILD_TYPE_UC STREQUAL "RELEASE" OR CMAKE_BUILD_TYPE_UC STREQUAL "RELWITHDEBINFO" OR CMAKE_BUILD_TYPE_UC STREQUAL "MINSIZEREL")
+if (CMAKE_BUILD_TYPE_UC STREQUAL "DEBUG" OR SAN_DEBUG)
+        set(_SYMBOLIZATION_BUILD_PROFILE "debug")
+else()
         set(_SYMBOLIZATION_BUILD_PROFILE "release")
         set(_SYMBOLIZATION_BUILD_ARGS --release)
-else()
-        set(_SYMBOLIZATION_BUILD_PROFILE "debug")
 endif()
 
 add_custom_command(OUTPUT ${_SYMBOLIZATION_LIBRARY}
