--- a/contrib/tiflash-proxy-cmake/CMakeLists.txt
+++ b/contrib/tiflash-proxy-cmake/CMakeLists.txt
@@ -3,12 +3,12 @@ set(_TIFLASH_PROXY_LIBRARY "${_TIFLASH_PROXY_SOURCE_DIR}/target/release/${CMAKE_
 file(GLOB_RECURSE _TIFLASH_PROXY_SRCS "${_TIFLASH_PROXY_SOURCE_DIR}/*.rs")
 list(FILTER _TIFLASH_PROXY_SRCS EXCLUDE REGEX ${_TIFLASH_PROXY_SOURCE_DIR}/target/.*)
 
-if (CMAKE_BUILD_TYPE_UC STREQUAL "RELEASE" OR CMAKE_BUILD_TYPE_UC STREQUAL "RELWITHDEBINFO" OR CMAKE_BUILD_TYPE_UC STREQUAL "MINSIZEREL")
-    set(_TIFLASH_PROXY_BUILD_PROFILE "release")
-    set(_TIFLASH_PROXY_MAKE_COMMAND make release)
-else()
+if (CMAKE_BUILD_TYPE_UC STREQUAL "DEBUG" OR SAN_DEBUG)
     set(_TIFLASH_PROXY_BUILD_PROFILE "debug")
     set(_TIFLASH_PROXY_MAKE_COMMAND make debug)
+else()
+    set(_TIFLASH_PROXY_BUILD_PROFILE "release")
+    set(_TIFLASH_PROXY_MAKE_COMMAND make release)
 endif()
 
 # use `CFLAGS=-w CXXFLAGS=-w` to inhibit warning messages.
