fix compile for arm

--- a/libs/libmemcpy/CMakeLists.txt
+++ b/libs/libmemcpy/CMakeLists.txt
@@ -35,6 +35,9 @@ if (USE_INTERNAL_MEMCPY)
         message (STATUS "Using internal memcpy")
         list (APPEND memcpy_sources memcpy.cpp)
     endif ()
+else ()
+    add_definitions(-DNO_TIFLASH_INTERNAL_MEMCPY=1)
+    list (APPEND memcpy_sources memcpy.cpp)
 endif()
 
 add_library (memcpy STATIC ${memcpy_sources})
